[workspace]
members = ["frontend", "backend", "common"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8" }
chrono = { version = "0.4.41", features = ["serde"] }
console_error_panic_hook = { version = "0.1" }
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
wasm-bindgen = { version = "=0.2.100" }


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[workspace.metadata.leptos]]
name = "keeper"
bin-package = "backend"
lib-package = "frontend"
style-file = "style/main.scss"
assets-dir = "public"