[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
common = { path = "../common" }
leptos_axum = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
